tests/testData/graphql/resolve/operations/FragmentExcluded/query.graphql
query {
    user {
        ...<error descr="Unknown fragment spread \"UserFragment\"">User<caret>Fragment</error>
}
}
